# dolc

./: .editorconfig  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
src/dolc/: __main__.py  checks.py  retrieve.py  synthese.py
src/dolc/nested/: nested.py
