[metadata]
name = dolc
description = Turn your documented python code into markdown files.
author = beastmatser
long_description = file: README.md
long_description_content_type=text/markdown
license = MIT
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
    Typing :: Typed

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.8
package_dir =
    =src

[options.entry_points]
console_scripts =
    dolc = dolc.__main__:main

[options.packages.find]
where = src

[options.package_data]
dolc = py.typed
